1999-08-25  Michael Meeks  <michael@imaginator.com>

	* doc/writing-modules.txt: Started.

1999-08-25  Michael Meeks  <michael@imaginator.com>

	* http-method.[ch]: First pass at implementing.
	
	* modules/file-method.c: Add NULL RenameFunc to methods, and
	remove const from do_make_directory's GnomeVFSURI.

	* modules/Makefile.am: Add libhttp.la, commented out.

1999-08-25  Ettore Perazzoli  <ettore@comm2000.it>

	* modules/file-method.c: Preconditions return `GNOME_VFS_INTERNAL'
	instead of `GNOME_VFS_BAD_POINTER'.

	* libgnomevfs/gnome-vfs-types.h: Removed value
	`GNOME_VFS_BAD_POINTER' from the `GnomeVFSResult' enum.

1999-08-25  Michael Meeks  <michael@imaginator.com>

	* modules/file-method.c: Update all preconditions to return BAD_POINTER
	as their GnomeVFSResult instead of FALSE.

	* libgnomevfs/gnome-vfs-types.h: Added GNOME_VFS_ERROR_BAD_POINTER.

	* modules/gzip-method.h: Rename conditional include
	from _FILE_H to _GZIP_H

1999-08-25  Ettore Perazzoli  <ettore@comm2000.it>

	* configure.in: Add gnomeui libs to `VFSCORBA_LIBS'.