@@ -1,3 +1,9 @@
+1999-08-26  Michael Meeks  <michael@imaginator.com>
+
+	* libgnomevfs/gnome-vfs-types.h: Add GnomeVFSFileSize, and
+	GnomeVFSFileOffset ( unsigned, signed ). and push through the
+	whole API - How will CORBA deal with this ?
+
 1999-08-25  Michael Meeks  <michael@imaginator.com>
 
 	* doc/writing-modules.txt: Started.
